apps/plane/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - secretName: plane-tls
      hosts:
        - plane.prodv2.cedille.club
  rules:
    - host: plane.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: plane
                port:
                  number: 3000
